Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="note js-note">
           <div class="note__text">
             <p>
-               ¿qué te parece si celebramos San Valentín juntos? Sería divertido pasar el día contigo. ¿Te animas? 💕
+               .¿qué te parece si celebramos San Valentín juntos? Sería divertido pasar el día contigo. ¿Te animas? 💕
               <img src="foto.png" alt="" class="custom-image">
             </p>
           </div>
